test/compilable/test15856.d
// REQUIRED_ARGS: -de
// PERMUTE_ARGS:
/*
TEST_OUTPUT:
---
---
*/

class Foo
{
    import imports.a15856;

    struct Bar
    {
        c_long a;
    }
}
